openjdk: derive the default --release from the running JDK, not hardcoded 26
The parser's default platform release was --release=26. Derive it from
java.lang.Runtime.version().feature() so a new JDK (27, ...) needs no code change,
and --enable-preview stays valid (it requires --release == the running version).
Fully qualified because the maddi CST 'Runtime' is imported in this file. Behaves
identically on JDK 26; :maddi-inspection-openjdk:test green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>